// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breakdown when data is loaded returns the transaction breakdown for a service 1`] = `
Object {
  "timeseries": Array [
    Object {
      "color": "#54b399",
      "data": Array [
        Object {
          "x": 1600159980000,
          "y": null,
        },
        Object {
          "x": 1600160010000,
          "y": null,
        },
        Object {
          "x": 1600160040000,
          "y": null,
        },
        Object {
          "x": 1600160070000,
          "y": 1,
        },
        Object {
          "x": 1600160100000,
          "y": 0.1875,
        },
        Object {
          "x": 1600160130000,
          "y": 0.2625,
        },
        Object {
          "x": 1600160160000,
          "y": null,
        },
        Object {
          "x": 1600160190000,
          "y": 0.48276,
        },
        Object {
          "x": 1600160220000,
          "y": 0.44,
        },
        Object {
          "x": 1600160250000,
          "y": 1,
        },
        Object {
          "x": 1600160280000,
          "y": null,
        },
        Object {
          "x": 1600160310000,
          "y": 0.17143,
        },
        Object {
          "x": 1600160340000,
          "y": 0.55,
        },
        Object {
          "x": 1600160370000,
          "y": 0.5,
        },
        Object {
          "x": 1600160400000,
          "y": null,
        },
        Object {
          "x": 1600160430000,
          "y": 0.41964,
        },
        Object {
          "x": 1600160460000,
          "y": 0.72222,
        },
        Object {
          "x": 1600160490000,
          "y": 0.83333,
        },
        Object {
          "x": 1600160520000,
          "y": null,
        },
        Object {
          "x": 1600160550000,
          "y": null,
        },
        Object {
          "x": 1600160580000,
          "y": 0.11045,
        },
        Object {
          "x": 1600160610000,
          "y": null,
        },
        Object {
          "x": 1600160640000,
          "y": null,
        },
        Object {
          "x": 1600160670000,
          "y": 0.15029,
        },
        Object {
          "x": 1600160700000,
          "y": 0.38095,
        },
        Object {
          "x": 1600160730000,
          "y": 0.06762,
        },
        Object {
          "x": 1600160760000,
          "y": null,
        },
        Object {
          "x": 1600160790000,
          "y": 0.26374,
        },
        Object {
          "x": 1600160820000,
          "y": null,
        },
        Object {
          "x": 1600160850000,
          "y": 0.52941,
        },
        Object {
          "x": 1600160880000,
          "y": null,
        },
        Object {
          "x": 1600160910000,
          "y": 0.0121,
        },
        Object {
          "x": 1600160940000,
          "y": 0.26126,
        },
        Object {
          "x": 1600160970000,
          "y": null,
        },
        Object {
          "x": 1600161000000,
          "y": null,
        },
        Object {
          "x": 1600161030000,
          "y": 0.16071,
        },
        Object {
          "x": 1600161060000,
          "y": 0.04027,
        },
        Object {
          "x": 1600161090000,
          "y": 1,
        },
        Object {
          "x": 1600161120000,
          "y": null,
        },
        Object {
          "x": 1600161150000,
          "y": 0.07895,
        },
        Object {
          "x": 1600161180000,
          "y": 0.40741,
        },
        Object {
          "x": 1600161210000,
          "y": null,
        },
        Object {
          "x": 1600161240000,
          "y": null,
        },
        Object {
          "x": 1600161270000,
          "y": 0.66667,
        },
        Object {
          "x": 1600161300000,
          "y": 0.82143,
        },
        Object {
          "x": 1600161330000,
          "y": 1,
        },
        Object {
          "x": 1600161360000,
          "y": null,
        },
        Object {
          "x": 1600161390000,
          "y": 0.17333,
        },
        Object {
          "x": 1600161420000,
          "y": 0.14286,
        },
        Object {
          "x": 1600161450000,
          "y": 0.85,
        },
        Object {
          "x": 1600161480000,
          "y": null,
        },
        Object {
          "x": 1600161510000,
          "y": 0.42105,
        },
        Object {
          "x": 1600161540000,
          "y": null,
        },
        Object {
          "x": 1600161570000,
          "y": null,
        },
        Object {
          "x": 1600161600000,
          "y": null,
        },
        Object {
          "x": 1600161630000,
          "y": null,
        },
        Object {
          "x": 1600161660000,
          "y": 0.01852,
        },
        Object {
          "x": 1600161690000,
          "y": 0.0625,
        },
        Object {
          "x": 1600161720000,
          "y": null,
        },
        Object {
          "x": 1600161750000,
          "y": 0.36765,
        },
        Object {
          "x": 1600161780000,
          "y": 0.10526,
        },
      ],
      "hideLegend": false,
      "legendValue": "23%",
      "title": "app",
      "type": "areaStacked",
    },
    Object {
      "color": "#6092c0",
      "data": Array [
        Object {
          "x": 1600159980000,
          "y": null,
        },
        Object {
          "x": 1600160010000,
          "y": null,
        },
        Object {
          "x": 1600160040000,
          "y": null,
        },
        Object {
          "x": 1600160070000,
          "y": 0,
        },
        Object {
          "x": 1600160100000,
          "y": 0.71875,
        },
        Object {
          "x": 1600160130000,
          "y": 0.4875,
        },
        Object {
          "x": 1600160160000,
          "y": null,
        },
        Object {
          "x": 1600160190000,
          "y": 0.41379,
        },
        Object {
          "x": 1600160220000,
          "y": 0,
        },
        Object {
          "x": 1600160250000,
          "y": 0,
        },
        Object {
          "x": 1600160280000,
          "y": null,
        },
        Object {
          "x": 1600160310000,
          "y": 0.62857,
        },
        Object {
          "x": 1600160340000,
          "y": 0,
        },
        Object {
          "x": 1600160370000,
          "y": 0.5,
        },
        Object {
          "x": 1600160400000,
          "y": null,
        },
        Object {
          "x": 1600160430000,
          "y": 0.4375,
        },
        Object {
          "x": 1600160460000,
          "y": 0,
        },
        Object {
          "x": 1600160490000,
          "y": 0,
        },
        Object {
          "x": 1600160520000,
          "y": null,
        },
        Object {
          "x": 1600160550000,
          "y": null,
        },
        Object {
          "x": 1600160580000,
          "y": 0.88955,
        },
        Object {
          "x": 1600160610000,
          "y": null,
        },
        Object {
          "x": 1600160640000,
          "y": null,
        },
        Object {
          "x": 1600160670000,
          "y": 0.7052,
        },
        Object {
          "x": 1600160700000,
          "y": 0,
        },
        Object {
          "x": 1600160730000,
          "y": 0.87189,
        },
        Object {
          "x": 1600160760000,
          "y": null,
        },
        Object {
          "x": 1600160790000,
          "y": 0.67033,
        },
        Object {
          "x": 1600160820000,
          "y": null,
        },
        Object {
          "x": 1600160850000,
          "y": 0,
        },
        Object {
          "x": 1600160880000,
          "y": null,
        },
        Object {
          "x": 1600160910000,
          "y": 0.9879,
        },
        Object {
          "x": 1600160940000,
          "y": 0.73874,
        },
        Object {
          "x": 1600160970000,
          "y": null,
        },
        Object {
          "x": 1600161000000,
          "y": null,
        },
        Object {
          "x": 1600161030000,
          "y": 0.79464,
        },
        Object {
          "x": 1600161060000,
          "y": 0.95973,
        },
        Object {
          "x": 1600161090000,
          "y": 0,
        },
        Object {
          "x": 1600161120000,
          "y": null,
        },
        Object {
          "x": 1600161150000,
          "y": 0.92105,
        },
        Object {
          "x": 1600161180000,
          "y": 0,
        },
        Object {
          "x": 1600161210000,
          "y": null,
        },
        Object {
          "x": 1600161240000,
          "y": null,
        },
        Object {
          "x": 1600161270000,
          "y": 0,
        },
        Object {
          "x": 1600161300000,
          "y": 0,
        },
        Object {
          "x": 1600161330000,
          "y": 0,
        },
        Object {
          "x": 1600161360000,
          "y": null,
        },
        Object {
          "x": 1600161390000,
          "y": 0.74667,
        },
        Object {
          "x": 1600161420000,
          "y": 0.85714,
        },
        Object {
          "x": 1600161450000,
          "y": 0,
        },
        Object {
          "x": 1600161480000,
          "y": null,
        },
        Object {
          "x": 1600161510000,
          "y": 0.57895,
        },
        Object {
          "x": 1600161540000,
          "y": null,
        },
        Object {
          "x": 1600161570000,
          "y": null,
        },
        Object {
          "x": 1600161600000,
          "y": null,
        },
        Object {
          "x": 1600161630000,
          "y": null,
        },
        Object {
          "x": 1600161660000,
          "y": 0.98148,
        },
        Object {
          "x": 1600161690000,
          "y": 0.9375,
        },
        Object {
          "x": 1600161720000,
          "y": null,
        },
        Object {
          "x": 1600161750000,
          "y": 0.55882,
        },
        Object {
          "x": 1600161780000,
          "y": 0.89474,
        },
      ],
      "hideLegend": false,
      "legendValue": "68%",
      "title": "http",
      "type": "areaStacked",
    },
    Object {
      "color": "#d36086",
      "data": Array [
        Object {
          "x": 1600159980000,
          "y": null,
        },
        Object {
          "x": 1600160010000,
          "y": null,
        },
        Object {
          "x": 1600160040000,
          "y": null,
        },
        Object {
          "x": 1600160070000,
          "y": 0,
        },
        Object {
          "x": 1600160100000,
          "y": 0.09375,
        },
        Object {
          "x": 1600160130000,
          "y": 0.25,
        },
        Object {
          "x": 1600160160000,
          "y": null,
        },
        Object {
          "x": 1600160190000,
          "y": 0.10345,
        },
        Object {
          "x": 1600160220000,
          "y": 0.56,
        },
        Object {
          "x": 1600160250000,
          "y": 0,
        },
        Object {
          "x": 1600160280000,
          "y": null,
        },
        Object {
          "x": 1600160310000,
          "y": 0.2,
        },
        Object {
          "x": 1600160340000,
          "y": 0.45,
        },
        Object {
          "x": 1600160370000,
          "y": 0,
        },
        Object {
          "x": 1600160400000,
          "y": null,
        },
        Object {
          "x": 1600160430000,
          "y": 0.14286,
        },
        Object {
          "x": 1600160460000,
          "y": 0.27778,
        },
        Object {
          "x": 1600160490000,
          "y": 0.16667,
        },
        Object {
          "x": 1600160520000,
          "y": null,
        },
        Object {
          "x": 1600160550000,
          "y": null,
        },
        Object {
          "x": 1600160580000,
          "y": 0,
        },
        Object {
          "x": 1600160610000,
          "y": null,
        },
        Object {
          "x": 1600160640000,
          "y": null,
        },
        Object {
          "x": 1600160670000,
          "y": 0.14451,
        },
        Object {
          "x": 1600160700000,
          "y": 0.61905,
        },
        Object {
          "x": 1600160730000,
          "y": 0.0605,
        },
        Object {
          "x": 1600160760000,
          "y": null,
        },
        Object {
          "x": 1600160790000,
          "y": 0.06593,
        },
        Object {
          "x": 1600160820000,
          "y": null,
        },
        Object {
          "x": 1600160850000,
          "y": 0.47059,
        },
        Object {
          "x": 1600160880000,
          "y": null,
        },
        Object {
          "x": 1600160910000,
          "y": 0,
        },
        Object {
          "x": 1600160940000,
          "y": 0,
        },
        Object {
          "x": 1600160970000,
          "y": null,
        },
        Object {
          "x": 1600161000000,
          "y": null,
        },
        Object {
          "x": 1600161030000,
          "y": 0.04464,
        },
        Object {
          "x": 1600161060000,
          "y": 0,
        },
        Object {
          "x": 1600161090000,
          "y": 0,
        },
        Object {
          "x": 1600161120000,
          "y": null,
        },
        Object {
          "x": 1600161150000,
          "y": 0,
        },
        Object {
          "x": 1600161180000,
          "y": 0.59259,
        },
        Object {
          "x": 1600161210000,
          "y": null,
        },
        Object {
          "x": 1600161240000,
          "y": null,
        },
        Object {
          "x": 1600161270000,
          "y": 0.33333,
        },
        Object {
          "x": 1600161300000,
          "y": 0.17857,
        },
        Object {
          "x": 1600161330000,
          "y": 0,
        },
        Object {
          "x": 1600161360000,
          "y": null,
        },
        Object {
          "x": 1600161390000,
          "y": 0.08,
        },
        Object {
          "x": 1600161420000,
          "y": 0,
        },
        Object {
          "x": 1600161450000,
          "y": 0.15,
        },
        Object {
          "x": 1600161480000,
          "y": null,
        },
        Object {
          "x": 1600161510000,
          "y": 0,
        },
        Object {
          "x": 1600161540000,
          "y": null,
        },
        Object {
          "x": 1600161570000,
          "y": null,
        },
        Object {
          "x": 1600161600000,
          "y": null,
        },
        Object {
          "x": 1600161630000,
          "y": null,
        },
        Object {
          "x": 1600161660000,
          "y": 0,
        },
        Object {
          "x": 1600161690000,
          "y": 0,
        },
        Object {
          "x": 1600161720000,
          "y": null,
        },
        Object {
          "x": 1600161750000,
          "y": 0.07353,
        },
        Object {
          "x": 1600161780000,
          "y": 0,
        },
      ],
      "hideLegend": false,
      "legendValue": "9.3%",
      "title": "postgresql",
      "type": "areaStacked",
    },
  ],
}
`;

exports[`Breakdown when data is loaded returns the transaction breakdown for a transaction group 9`] = `
Array [
  Object {
    "x": 1600159980000,
    "y": null,
  },
  Object {
    "x": 1600160010000,
    "y": null,
  },
  Object {
    "x": 1600160040000,
    "y": null,
  },
  Object {
    "x": 1600160070000,
    "y": null,
  },
  Object {
    "x": 1600160100000,
    "y": 1,
  },
  Object {
    "x": 1600160130000,
    "y": 1,
  },
  Object {
    "x": 1600160160000,
    "y": null,
  },
  Object {
    "x": 1600160190000,
    "y": 1,
  },
  Object {
    "x": 1600160220000,
    "y": null,
  },
  Object {
    "x": 1600160250000,
    "y": null,
  },
  Object {
    "x": 1600160280000,
    "y": null,
  },
  Object {
    "x": 1600160310000,
    "y": 1,
  },
  Object {
    "x": 1600160340000,
    "y": null,
  },
  Object {
    "x": 1600160370000,
    "y": 1,
  },
  Object {
    "x": 1600160400000,
    "y": null,
  },
  Object {
    "x": 1600160430000,
    "y": 1,
  },
  Object {
    "x": 1600160460000,
    "y": null,
  },
  Object {
    "x": 1600160490000,
    "y": null,
  },
  Object {
    "x": 1600160520000,
    "y": null,
  },
  Object {
    "x": 1600160550000,
    "y": null,
  },
  Object {
    "x": 1600160580000,
    "y": 1,
  },
  Object {
    "x": 1600160610000,
    "y": null,
  },
  Object {
    "x": 1600160640000,
    "y": null,
  },
  Object {
    "x": 1600160670000,
    "y": 1,
  },
  Object {
    "x": 1600160700000,
    "y": null,
  },
  Object {
    "x": 1600160730000,
    "y": 1,
  },
  Object {
    "x": 1600160760000,
    "y": null,
  },
  Object {
    "x": 1600160790000,
    "y": 1,
  },
  Object {
    "x": 1600160820000,
    "y": null,
  },
  Object {
    "x": 1600160850000,
    "y": null,
  },
  Object {
    "x": 1600160880000,
    "y": null,
  },
  Object {
    "x": 1600160910000,
    "y": 1,
  },
  Object {
    "x": 1600160940000,
    "y": 1,
  },
  Object {
    "x": 1600160970000,
    "y": null,
  },
  Object {
    "x": 1600161000000,
    "y": null,
  },
  Object {
    "x": 1600161030000,
    "y": 1,
  },
  Object {
    "x": 1600161060000,
    "y": 1,
  },
  Object {
    "x": 1600161090000,
    "y": null,
  },
  Object {
    "x": 1600161120000,
    "y": null,
  },
  Object {
    "x": 1600161150000,
    "y": 1,
  },
  Object {
    "x": 1600161180000,
    "y": null,
  },
  Object {
    "x": 1600161210000,
    "y": null,
  },
  Object {
    "x": 1600161240000,
    "y": null,
  },
  Object {
    "x": 1600161270000,
    "y": null,
  },
  Object {
    "x": 1600161300000,
    "y": null,
  },
  Object {
    "x": 1600161330000,
    "y": null,
  },
  Object {
    "x": 1600161360000,
    "y": null,
  },
  Object {
    "x": 1600161390000,
    "y": 1,
  },
  Object {
    "x": 1600161420000,
    "y": 1,
  },
  Object {
    "x": 1600161450000,
    "y": null,
  },
  Object {
    "x": 1600161480000,
    "y": null,
  },
  Object {
    "x": 1600161510000,
    "y": 1,
  },
  Object {
    "x": 1600161540000,
    "y": null,
  },
  Object {
    "x": 1600161570000,
    "y": null,
  },
  Object {
    "x": 1600161600000,
    "y": null,
  },
  Object {
    "x": 1600161630000,
    "y": null,
  },
  Object {
    "x": 1600161660000,
    "y": 1,
  },
  Object {
    "x": 1600161690000,
    "y": 1,
  },
  Object {
    "x": 1600161720000,
    "y": null,
  },
  Object {
    "x": 1600161750000,
    "y": 1,
  },
  Object {
    "x": 1600161780000,
    "y": 1,
  },
]
`;
